[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 48.0
margin_bottom = 41.0
rect_scale = Vector2( 8.50774, 13.7098 )
color = Color( 0.0313726, 0.0392157, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
rect_scale = Vector2( 1.54538, 1.85737 )
text = "000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -150.0
margin_right = 180.0
margin_bottom = 150.0
text = "You have unexpectedly inherited a treasure
chest when your uncle suddenly passed away. 

His will states that you have to pass a sailing test
before you are eligible for it. 

Being an avid sailor, he has decreed that you navigate
the Suez canal and survive for more than 100 seconds. 

Only then can you lay claim to the treasure.

Good Luck Sailor

-----

Use Arrow Keys to Move"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = -50.0
rect_scale = Vector2( 1.00186, 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
